Add child theme supports translation

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: HocWP Theme Child
 Theme URI: http://hocwp.net/project/
 Author: HocWP Team
 Author URI: http://facebook.com/hocwpnet/
-Description: This theme is created by HocWP Team, please create a child theme to use this theme.
+Description: This is a child theme created by HocWP Team.
 Real Theme Name: Default Child Theme
 Used For: example.com
 Created Date: 17/08/2023
