Update https uri

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
 Theme Name: HocWP Theme Child
-Theme URI: http://hocwp.net/project/
+Theme URI: https://hocwp.net/project/
 Author: HocWP Team
-Author URI: http://facebook.com/hocwpnet/
+Author URI: https://facebook.com/hocwpnet/
 Description: This is a child theme created by HocWP Team.
 Real Theme Name: Default Child Theme
 Used For: example.com
@@ -16,7 +16,7 @@ Requires PHP: 7.4
 Text Domain: hocwp-theme-child
 Template: hocwp-theme
 License: GNU General Public License v2 or later
-License URI: http://www.gnu.org/licenses/gpl-2.0.html
+License URI: https://www.gnu.org/licenses/gpl-2.0.html
 Tags: one-column, two-columns, left-sidebar, right-sidebar, flexible-header, custom-colors, custom-header, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, post-formats, sticky-post, theme-options, threaded-comments, translation-ready
 
 Copyright (c) 2023, HocWP Team.
