Update default theme before Fapas

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: HocWP Theme Child
+Theme Name: Child Theme
 Theme URI: https://hocwp.net/project/
 Author: HocWP Team
 Author URI: https://facebook.com/hocwpnet/
@@ -7,7 +7,7 @@ Description: This is a child theme created by HocWP Team.
 Real Theme Name: Default Child Theme
 Used For: example.com
 Created Date: 17/08/2023
-Last Updated: 13/11/2023
+Last Updated: 24/01/2024
 Coder: laidinhcuongvn@gmail.com
 Version: 1.0.0
 Tested up to: 6.4
