--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 /*
 Theme Name: HocWP Theme Child
-Theme URI: https://hocwp.net/project/
+Theme URI: https://ldcuong.com/
 Author: HocWP Team
-Author URI: https://facebook.com/hocwpnet/
+Author URI: https://facebook.com/skylarkcob/
 Description: This is a child theme created by HocWP Team.
 Real Theme Name: Default Child Theme
 Used For: example.com
 Created Date: 17/08/2023
-Last Updated: 16/12/2024
+Last Updated: 16/10/2025
 Coder: laidinhcuongvn@gmail.com
 Version: 1.0.0
-Tested up to: 6.7
-Requires at least: 6.5
+Tested up to: 6.8
+Requires at least: 6.6
 Requires PHP: 7.4
 Text Domain: hocwp-theme-child
 Template: hocwp-theme
